Added functionality for showing a list of saved workouts. Now i have to figure out what to do about the issue that "save" creates a pdf instead of actually saving